codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_truncates_in_narrow_terminal.snap
---
source: tui/src/status/tests.rs
assertion_line: 564
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.0.0)                                         │
│                                                                   │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date     │
│ information on rate limits and credits                            │
│                                                                   │
│  Model:            gpt-5.1-codex-max                              │
│  Model provider:   OpenRouter - https://openrouter.ai/api/v1      │
│  Directory: [[workspace]]                                         │
│  Approval:         on-request                                     │
│  Sandbox:          read-only                                      │
│  Agents.md:        <none>                                         │
│                                                                   │
│  Token usage:      1.9K total  (1K input + 900 output)            │
│  Context window:   100% left (2.25K used / 272K)                  │
│  5h limit:         [██████░░░░░░░░░░░░░░] 28% left (resets 03:14) │
╰───────────────────────────────────────────────────────────────────╯
